2002-10-03  Darin Adler  <darin@apple.com>

	- fixed 3065730 -- Crash loading "My T-Mobile" page (in khtml::Decoder::decode)

        * khtml/misc/decoder.cpp: (Decoder::decode): Fixed a mistake that would cause
	the loop to run off the end of the buffer, introduced back on 2002-08-30.

2002-10-03  Darin Adler  <darin@apple.com>

	Add API to execute JavaScript.

        * kwq/WebCoreBridge.h: Add method.
        * kwq/WebCoreBridge.mm:
        (-[WebCoreBridge executeJavaScriptFromString:]): Call through to
	KHTML. But only if the document is not nil. We need to figure out
	what to do in the case where the document is nil.

=== Alexander-26 ===

2002-10-02  Darin Adler  <darin@apple.com>

	Moved "overURL" handling out of WebCore into WebKit and Alex.
	Also separated the two levels of the "element dictionary" so they
	don't rely on having the same keys.

        * khtml/khtml_part.h: Revert the APPLE_CHANGES to overURL.
        * khtml/khtml_part.cpp:
        (KHTMLPart::overURL): Removed the APPLE_CHANGES and just ifdef'd out
	the whole thing for our version.
        (KHTMLPart::khtmlMouseMoveEvent): Get rid of the APPLE_CHANGES and
	don't do any of the status bar setup.

        * kwq/KWQKHTMLPartImpl.h: Remove overURL.
        * kwq/KWQKHTMLPartImpl.mm: Ditto.

        * kwq/WebCoreBridge.h: Change keys so they don't match the WebKit ones so
	we don't accidentally rely on that. Add WebCoreElementLinkTarget.

        * kwq/WebCoreBridge.mm: (-[WebCoreBridge elementAtPoint:]): Add code to
	set up WebCoreElementLinkTarget.

2002-10-01  Darin Adler  <darin@apple.com>

	- fixed 3055076 -- window.scroll does a window.scrollby, not a window.scrollto

        * khtml/ecma/kjs_window.cpp: (WindowFunc::tryCall): Moved a case so that the
	scroll code would scroll to, not by.

2002-10-01  David Hyatt  <hyatt@apple.com>

	Fix the case sensitivity problem with attribute names 
	in HTML.  They are now lower-cased when being queried
	from the DOM. Bug 3058145.
	